--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ color:rgb(120,10,0);
 
 
 
-<img src="{{ site.url }}/images/voiceograph.jpg" alt="image">
+<img src="{{ site.url }}/images/voiceograph_heller.jpg" alt="image">
 <br />
 Ausstellungsansicht Voice-O-Graph, Christoph Freidhöfer / Natascha Muhic<br />
 Ausstellungsdauer: 09.09. - 25.09.2106
