--- a/diskurs&konfrontation.html
+++ b/diskurs&konfrontation.html
@@ -10,8 +10,30 @@ show_worktitle_sidebar: true
 <style>
 body{
   background-image:none;
-  background-color: white !important;
+  background-color: black !important;
 }
+a {color:rgb(200,200,200);
+}
+.container-narrow {background-color: black; color:rgb(200,200,200);
+}
+.navbar-inner
+{   
+    color:grey !important;
+    background-color: black !important;
+}
+
+
+{% comment %}
+.navbar .logo {
+  font-weight: 100 !important;
+  color: white !important;
+  text-shadow: none;
+}
+{% endcomment %}
+
+
+
+
 </style>
 </head>
 
