--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@ color:rgb(120,10,0);
 {% endcomment %}
 
 
+<br />
+<p style="font-size:18px" text-align="justify" align="right">
+soon:<br /><br />
+George Rei - 07|10|16
+<br /><br /><br />
+<br /><br /><br />
+</p>
 
 
 <img src="{{ site.url }}/images/voiceograph_heller.jpg" alt="image">
@@ -35,14 +42,9 @@ Ausstellungsdauer: 09.09. - 25.09.2106
 <br /><br /><br /><br />
 <p style="font-size:18px" text-align="justify" align="right">
 
-Mario de Vega - 05|10|16
-<br /><br /><br />
-George Rei - 07|10|16
-<br /><br /><br />
-<br /><br /><br />
 
-
-<br /><br />
+Karl Salzmann - 1|1|16
+<br /><br /><br />
 Michael Fischer - 18|09|16
 <br /><br /><br />
 Christoph Freidhöfer / Natascha Muhic, Black Biuti, Jorge Sanchez Chiong - 08|09|16
