--- a/kontakt.html
+++ b/kontakt.html
@@ -19,7 +19,10 @@ mail[at]zentrale.jetzt
 Neulerchenfelderstraße 52, 1160 Wien
 <br /><br />
 
-<a href="https://facebook.com/" target="_blank">FB</a>
+
+<a href="https://facebook.com/Zentrale.jetzt" target="_blank">FB</a>
+
+{% comment %}
 <br />
 <a href="https://soundcloud.com/" target="_blank">SC</a>
 <br />
@@ -27,7 +30,7 @@ Neulerchenfelderstraße 52, 1160 Wien
 
 <br /><br />
 
-{% comment %}
+
 <a href="https://youtube.com/" style="color:red" target="_blank">youtu</a>
 {% endcomment %}
 </p>
