--- a/tontraeger&unterhaltung.html
+++ b/tontraeger&unterhaltung.html
@@ -5,7 +5,7 @@ header : Z - T&U
 group: navigation
 ---
 
-
+{% comment %}
 <head>
 <style>
 body{
@@ -14,7 +14,7 @@ body{
 }
 </style>
 </head>
-
+{% endcomment %}
 
 
 <div>
