--- a/index.html
+++ b/index.html
@@ -27,12 +27,10 @@ color:rgb(120,10,0);
 <br />
 <p style="font-size:18px" text-align="justify" align="right">
 George Rei - 07|10|16
-<br /><br /><br /><br />
-
-
-
 <br /><br /><br />
-Karl Salzmann - 1|1|16
+
+
+Karl Salzmann - 01|10|16
 <br /><br /><br />
 Michael Fischer - 18|09|16
 <br /><br /><br />
@@ -43,7 +41,7 @@ Christoph Freidhöfer / Natascha Muhic, Black Biuti, Jorge Sanchez Chiong - 08|0
 <img src="{{ site.url }}/images/voiceograph_heller.jpg" alt="image">
 <br />
 Ausstellungsansicht Voice-O-Graph, Christoph Freidhöfer / Natascha Muhic<br />
-Ausstellungsdauer: 09.09. - 25.09.2106
+Ausstellungsdauer: 09|09 - 25|09|16
 <br /><br /><br />
 
 
