--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ color:rgb(120,10,0);
 
 <br />
 <p style="font-size:18px" text-align="justify" align="right">
-George Rei - 07|10|16
+George Rei, Albert Mayr, Cabaret Poulet - 07|10|16
 <br /><br /><br />
 
 
