--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ Christoph Freidhöfer / Natascha Muhic, Black Biuti, Jorge Sanchez Chiong - 08|0
 <br /><br /><br />
 </p>
 
-<img src="{{ site.url }}/images/voiceograph_heller.jpg" alt="image">
+<img src="{{ site.url }}/images/voiceograph.jpg" alt="image">
 <br />
 Ausstellungsansicht Voice-O-Graph, Christoph Freidhöfer / Natascha Muhic<br />
 Ausstellungsdauer: 09|09 - 25|09|16
