--- a/index.html
+++ b/index.html
@@ -24,7 +24,25 @@ color:rgb(120,10,0);
 {% endcomment %}
 
 
-<br />
+
+
+<p style="font-size:18px" text-align="justify" align="left">
+<b>George Rei </b> &nbsp;40,000 Feet
+</p>
+<p style="font-size:8px" text-align="justify" align="left"><br /></p>
+<p style="font-size:18px" text-align="justify" align="left">
+Ausstellungsdauer 08.10. - 02.11.2016<br /><br />
+</p>
+
+<img src="{{ site.url }}/images/george_rei.jpg" alt="image">
+<br /><br /><br />
+
+
+
+
+{% comment %}
+<br /><br /><br />
+
 <p style="font-size:18px" text-align="justify" align="right">
 George Rei, Albert Mayr, Cabaret Poulet - 07|10|16
 <br /><br /><br />
@@ -49,7 +67,7 @@ Ausstellungsdauer: 09|09 - 25|09|16
 Pit Noack, Mauricio Valdes / Martin Escalante - 03|09|16
 </p>
 
-
+{% endcomment %}
 
 {% comment %}
 
