--- a/kontakt.html
+++ b/kontakt.html
@@ -19,6 +19,8 @@ mail[at]zentrale.jetzt
 Neulerchenfelderstraße 52, 1160 Wien
 <br /><br />
 
+Öffnungzeiten: Donnerstag 12 - 18h, Freitag 16 - 19h, sowie nach Absprache
+<br /><br />
 
 <a href="https://facebook.com/Zentrale.jetzt" target="_blank">FB</a>
 
