--- a/index.html
+++ b/index.html
@@ -27,6 +27,24 @@ color:rgb(120,10,0);
 
 
 <p style="font-size:18px" text-align="justify" align="left">
+<b>ROY CULBERTSON<br /><br />
+ANNA LERCHBAUMER<br /><br />
+ANDREAS ZIßLER</b>
+
+Metall/Schweine/Popcorn/Styropor und Pommes<br /><br />
+
+Eröffnung am 03.11.2016 ab 18:00<br />
+Live Performances ab 20:00<br /><br />
+
+Ausstellungsdauer: 04.-23.11.2016
+</p>
+
+
+
+{% comment %}
+<br /><br /><br />
+
+<p style="font-size:18px" text-align="justify" align="left">
 <b>George Rei </b> &nbsp;40,000 Feet
 </p>
 <p style="font-size:8px" text-align="justify" align="left"><br /></p>
@@ -37,11 +55,6 @@ Ausstellungsdauer 08.10. - 02.11.2016<br /><br />
 <img src="{{ site.url }}/images/george_rei.jpg" alt="image">
 <br /><br /><br />
 
-
-
-
-{% comment %}
-<br /><br /><br />
 
 <p style="font-size:18px" text-align="justify" align="right">
 George Rei, Albert Mayr, Cabaret Poulet - 07|10|16
