--- a/index.html
+++ b/index.html
@@ -27,22 +27,22 @@ color:rgb(120,10,0);
 
 
 <p style="font-size:18px" text-align="justify" align="left">
-<b>ROY CULBERTSON<br /><br />
-ANNA LERCHBAUMER<br /><br />
-ANDREAS ZIßLER</b>
+<br />
+<b>ROY CULBERTSON / ANNA LERCHBAUMER / ANDREAS ZIßLER</b>
 <br /><br />
 Metall/Schweine/Popcorn/Styropor und Pommes<br /><br />
 
-Eröffnung am 03.11.2016 ab 18:00<br />
-Live Performances ab 20:00<br /><br />
+Ausstellungsdauer: 04.-23.11.2016<br /><br />
 
-Ausstellungsdauer: 04.-23.11.2016
+<img src="{{ site.url }}/images/opening_3-11.jpg" alt="image">
 </p>
 
 
 
 {% comment %}
 <br /><br /><br />
+Eröffnung am 03.11.2016 ab 18:00<br />
+Live Performances ab 20:00<br /><br />
 
 <p style="font-size:18px" text-align="justify" align="left">
 <b>George Rei </b> &nbsp;40,000 Feet
