--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@ color:rgb(120,10,0);
 
 <p style="font-size:18px" text-align="justify" align="left">
 <br />
-Gustavo Méndez / Stefan Nussbaumer
+<b>Gustavo Méndez / Stefan Nussbaumer</b>
 <br />
 live concerts: 11.11 8pm
-<br /><br />
+<br /><br /><br />
 <b>ROY CULBERTSON / ANNA LERCHBAUMER / ANDREAS ZIßLER</b>
 <br /><br />
 Metall/Schweine/Popcorn/Styropor und Pommes<br /><br />
