--- a/index.html
+++ b/index.html
@@ -28,25 +28,41 @@ color:rgb(120,10,0);
 
 <p style="font-size:18px" text-align="justify" align="left">
 <br />
+<b>Thomas Wagensommerer</b>
+<br /><br />
+sleeping domains<br /><br />
+
+Ausstellungsdauer: 25.11.16 - 07.12.16<br /><br />
+
+<br /><br /><br />
+Eröffnung am 24.11.2016 ab 18:00<br />
+Live Performance um 19:30<br /><br />
+
+
+<img src="{{ site.url }}/images/thomas_wagensommerer.jpg" alt="image">
+</p>
+
+
+
+{% comment %}
+
 <b>Gustavo Méndez / Stefan Nussbaumer</b>
 <br />
 live concerts: 11.11 8pm
 <br /><br /><br />
+
+
 <b>ROY CULBERTSON / ANNA LERCHBAUMER / ANDREAS ZIßLER</b>
 <br /><br />
 Metall/Schweine/Popcorn/Styropor und Pommes<br /><br />
 
 Ausstellungsdauer: 04.-23.11.2016<br /><br />
 
-<img src="{{ site.url }}/images/opening_3-11.jpg" alt="image">
-</p>
-
-
-
-{% comment %}
 <br /><br /><br />
 Eröffnung am 03.11.2016 ab 18:00<br />
 Live Performances ab 20:00<br /><br />
+
+
 
 <p style="font-size:18px" text-align="justify" align="left">
 <b>George Rei </b> &nbsp;40,000 Feet
@@ -56,13 +72,17 @@ Live Performances ab 20:00<br /><br />
 Ausstellungsdauer 08.10. - 02.11.2016<br /><br />
 </p>
 
+
+
 <img src="{{ site.url }}/images/george_rei.jpg" alt="image">
 <br /><br /><br />
+
 
 
 <p style="font-size:18px" text-align="justify" align="right">
 George Rei, Albert Mayr, Cabaret Poulet - 07|10|16
 <br /><br /><br />
+
 
 
 Karl Salzmann - 01|10|16
@@ -72,6 +92,8 @@ Michael Fischer - 18|09|16
 Christoph Freidhöfer / Natascha Muhic, Black Biuti, Jorge Sanchez Chiong - 08|09|16
 <br /><br /><br />
 </p>
+
+
 
 <img src="{{ site.url }}/images/voiceograph_heller.jpg" alt="image">
 <br />
@@ -84,10 +106,11 @@ Ausstellungsdauer: 09|09 - 25|09|16
 Pit Noack, Mauricio Valdes / Martin Escalante - 03|09|16
 </p>
 
+
 {% endcomment %}
 
-{% comment %}
 
+{% comment %}
 {% endcomment %}
 
 
