--- a/index.html
+++ b/index.html
@@ -28,6 +28,34 @@ color:rgb(120,10,0);
 
 <p style="font-size:18px" text-align="justify" align="left">
 <br />
+<b>Sperl / Fischer / Gross</b>
+<br />
+10.12.2016
+
+<b>Die Vorspielservice</b>
+<br />
+16.12.2016
+<br />
+
+<br />
+<b>LINE FINDERUP JENSEN & MAINTANE MIDBY</b>
+<br /><br />
+"Silent Scream"<br /><br />
+
+Ausstellungsdauer: 09.12.16 - 22.12.16<br /><br />
+
+Eröffnung am 08.12.2016<br />
+Live Performances Danielle Pamp, Peter Moosgaard<br /><br />
+
+<img src="{{ site.url }}/images/line_maitane.jpg" alt="image">
+</p>
+
+
+
+{% comment %}
+
+<p style="font-size:18px" text-align="justify" align="left">
+<br />
 <b>Thomas Wagensommerer</b>
 <br /><br />
 sleeping domains<br /><br />
@@ -39,10 +67,6 @@ Live Performance um 19:30<br /><br />
 
 <img src="{{ site.url }}/images/thomas_wagensommerer.jpg" alt="image">
 </p>
-
-
-
-{% comment %}
 
 <b>Gustavo Méndez / Stefan Nussbaumer</b>
 <br />
