--- a/archiv.html
+++ b/archiv.html
@@ -19,7 +19,7 @@ Thomas Wagensommerer - 24.11.16
 <br /><br />
 Gustavo Méndez / Stefan Nussbaumer - 11.11.16
 <br /><br />
-Roy Culbertson / Anna Lerchbaumer / Andreas Zißler - 03.11.16
+Roy Culbertson / Anna Lerchbaumer & Andreas Zißler - 03.11.16
 <br /><br />
 João Castro Pinto - 29.10.16
 <br /><br />	
@@ -31,7 +31,7 @@ Michael Fischer - 18.09.16
 <br /><br />
 Christoph Freidhöfer / Natascha Muhic, Black Biuti, Jorge Sanchez Chiong - 08.09.16
 <br /><br />
-Pit Noack, Mauricio Valdes / Martin Escalante - 03.09.16
+Pit Noack, Mauricio Valdes & Martin Escalante - 03.09.16
 </p>
 
 
