--- a/index.html
+++ b/index.html
@@ -28,17 +28,6 @@ color:rgb(120,10,0);
 
 <p style="font-size:18px" text-align="justify" align="left">
 <br />
-<b>Sperl / Fischer / Gross</b>
-<br />
-10.12.2016
-<br />
-
-<b>Die Vorspielservice</b>
-<br />
-16.12.2016
-<br /><br />
-
-<br />
 <b>LINE FINDERUP JENSEN & MAINTANE MIDBY</b>
 <br /><br />
 "Silent Scream"<br /><br />
@@ -54,6 +43,24 @@ Live Performances Danielle Pamp, Peter Moosgaard<br /><br />
 
 
 {% comment %}
+
+
+<br />
+<b>Sperl / Fischer / Gross</b>
+<br />
+10.12.2016
+<br />
+
+<b>Die Vorspielservice</b>
+<br />
+16.12.2016
+<br /><br />
+
+<b>Bachaco Lo-Fi</b>
+<br />
+17.12.2016
+<br /><br />
+
 
 <p style="font-size:18px" text-align="justify" align="left">
 <br />
