--- a/index.html
+++ b/index.html
@@ -24,6 +24,22 @@ color:rgb(120,10,0);
 {% endcomment %}
 
 
+<p style="font-size:18px" text-align="justify" align="left">
+<br />
+<b>Elena Romenkova & Christian Munk</b>
+<br /><br />
+“TUR8AT1O IN DATA OF TIME”<br /><br />
+
+Ausstellungsdauer: 14.01.17 - 01.02.17<br /><br />
+
+Eröffnung am 03.12.2016<br />
+Live Performances Christian Munk & Lambert Frey<br /><br />
+
+<img src="{{ site.url }}/images/romenkova.jpg" alt="image">
+</p>
+
+{% comment %}
+
 
 
 <p style="font-size:18px" text-align="justify" align="left">
@@ -39,10 +55,6 @@ Live Performances Danielle Pamp, Peter Moosgaard<br /><br />
 
 <img src="{{ site.url }}/images/line_maitane.jpg" alt="image">
 </p>
-
-
-
-{% comment %}
 
 
 <br />
