--- a/index.html
+++ b/index.html
@@ -26,6 +26,29 @@ color:rgb(120,10,0);
 
 <p style="font-size:18px" text-align="justify" align="left">
 <br />
+<b>Bernhard Rappold and The Lost Incas feat. Felix Leon Westner</b>
+
+{% comment %}
+<br /><br />
+“TUR8AT1O IN DATA OF TIME”<br /><br />
+{% endcomment %}
+
+Ausstellungsdauer: 05.02.17 - 28.02.17<br /><br />
+
+Eröffnung am 04.02.2017<br />
+
+<br /><br />
+
+<img src="{{ site.url }}/images/rappold.jpg" alt="image">
+</p>
+
+
+
+{% comment %}
+
+
+<p style="font-size:18px" text-align="justify" align="left">
+<br />
 <b>Elena Romenkova & Christian Munk</b>
 <br /><br />
 “TUR8AT1O IN DATA OF TIME”<br /><br />
@@ -37,9 +60,6 @@ Live Performances Christian Munk & Lambert Frey<br /><br />
 
 <img src="{{ site.url }}/images/romenkova.jpg" alt="image">
 </p>
-
-{% comment %}
-
 
 
 <p style="font-size:18px" text-align="justify" align="left">
@@ -89,13 +109,10 @@ Live Performance um 19:30<br /><br />
 </p>
 
 
-
 <b>Gustavo Méndez / Stefan Nussbaumer</b>
 <br />
 live concerts: 11.11 8pm
 <br /><br /><br />
-
-
 
 
 <b>ROY CULBERTSON / ANNA LERCHBAUMER / ANDREAS ZIßLER</b>
@@ -107,9 +124,6 @@ Ausstellungsdauer: 04.-23.11.2016<br /><br />
 <br /><br /><br />
 Eröffnung am 03.11.2016 ab 18:00<br />
 Live Performances ab 20:00<br /><br />
-
-
-
 
 
 <p style="font-size:18px" text-align="justify" align="left">
@@ -129,8 +143,6 @@ George Rei, Albert Mayr, Cabaret Poulet - 07|10|16
 
 
 
-
-
 Karl Salzmann - 01|10|16
 <br /><br /><br />
 Michael Fischer - 18|09|16
@@ -138,7 +150,6 @@ Michael Fischer - 18|09|16
 Christoph Freidhöfer / Natascha Muhic, Black Biuti, Jorge Sanchez Chiong - 08|09|16
 <br /><br /><br />
 </p>
-
 
 
 <img src="{{ site.url }}/images/voiceograph_heller.jpg" alt="image">
