--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@ color:rgb(120,10,0);
 
 {% comment %}
 <br /><br />
-“TUR8AT1O IN DATA OF TIME”<br /><br />
+“TUR8AT1O IN DATA OF TIME”
 {% endcomment %}
+<br /><br />
+
 
 Ausstellungsdauer: 05.02.17 - 28.02.17<br /><br />
 
