--- a/archiv.html
+++ b/archiv.html
@@ -25,7 +25,7 @@ Thomas Wagensommerer - 24.11.16
 <br /><br />
 Gustavo Méndez / Stefan Nussbaumer - 11.11.16
 <br /><br />
-Roy Culbertson / Anna Lerchbaumer & Andreas Zißler - 03.11.16
+Royl Culbertson / Anna Lerchbaumer & Andreas Zißler - 03.11.16
 <br /><br />
 João Castro Pinto - 29.10.16
 <br /><br />	
