--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@ color:rgb(120,10,0);
 </head>
 {% endcomment %}
 
+<p style="font-size:18px" text-align="justify" align="left">
+<br />
+upcoming:<br /><br />
+<b>Michael Fischer / Franciszek Araszkiewicz - 25.02.17 - 8pm</b>
+<br /><br />
 
 <p style="font-size:18px" text-align="justify" align="left">
 <br />
@@ -37,7 +42,7 @@ color:rgb(120,10,0);
 
 Ausstellungsdauer: 05.02.17 - 28.02.17<br /><br />
 
-Eröffnung am 04.02.2017<br />
+Eröffnung am 04.02.17<br />
 
 <br /><br />
 
