--- a/info.html
+++ b/info.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title : Kontakt
+title : Info
 header : Z - K
 group: navigation
 ---
@@ -14,15 +14,23 @@ die Zentrale versteht sich als Ort der Vernetzung und Distribution von Kunst, an
 
 <a href="https://www.google.at/maps/place/Zentrale/@48.211643,16.3306321,17z/data=!3m1!4b1!4m5!3m4!1s0x476d07e68fdbc33b:0xb68afec3e9121c8a!8m2!3d48.2116394!4d16.3328208" target="_blank">Zentrale - Raum für Klang und Prozesskunst</a>
 <br />
-mail[at]zentrale.jetzt
-<br />
 Neulerchenfelderstraße 52, 1160 Wien
-<br /><br />
-
+<br />
 Öffnungzeiten: Donnerstag 12 - 18h, Freitag 16 - 19h, sowie nach Absprache
 <br /><br />
-
+mail[at]zentrale.jetzt
+<br />
 <a href="https://facebook.com/Zentrale.jetzt" target="_blank">FB</a>
+<br />
+
+
+
+<br /><br />
+Das Zentrale Jahresprogramm 2017 wird unterstützt von: <br />
+
+<img src="{{ site.url }}/images/Wien_Kultur_small.gif" alt="image">
+
+
 
 {% comment %}
 <br />
