--- a/info.html
+++ b/info.html
@@ -26,11 +26,11 @@ mail[at]zentrale.jetzt
 
 
 <br /><br />
-Das Zentrale Jahresprogramm 2017 wird unterstützt von: <br />
+Das Zentrale Jahresprogramm 2017 wird unterstützt von: Wien Kultur, Bezirksvertretung Ottakring (Franz Prokop) <br />
 
 <img src="{{ site.url }}/images/Wien_Kultur_small.gif" alt="image">
 
-
+<img src="{{ site.url }}/images/bezirk16_small.jpg" alt="image">
 
 {% comment %}
 <br />
