--- a/index.html
+++ b/index.html
@@ -23,11 +23,52 @@ color:rgb(120,10,0);
 </head>
 {% endcomment %}
 
+
+
 <p style="font-size:18px" text-align="justify" align="left">
 <br />
-upcoming:<br /><br />
+
+.jetzt:<br /><br />
+
+{% comment %}
 <b>Michael Fischer / Franciszek Araszkiewicz - 25.02.17 - 8pm</b>
 <br /><br />
+{% endcomment %}
+
+________________________________________________________________<br />
+<br />
+<br />
+.bald:<br /><br />
+
+04.03.2017			Klasse Experimentelle Medien (Ausstellung)<br /><br />
+
+28.03.2017			Ensemble Pamplemousse (Filmscreening)<br /><br />
+
+30.03.2017			Trauriges Tropen Orchester (Konzert)<br /><br />
+
+31.03.2017			Mario de Vega (Performance)<br /><br />
+
+06.-09.04.2017		Sound Arte Povera (Mini-Festival)<br /><br />
+
+12.04.2017			Margit Busch & Ulrike Königshofer (Ausstellung)<br /><br />
+
+05.05.2017			Strotter Inst. (Ausstellung)<br /><br />
+
+18.05.2017			Dieb13 (Lecture-Performance)<br /><br />
+
+
+
+
+
+
+
+
+
+
+
+
+{% comment %}
+
 
 <p style="font-size:18px" text-align="justify" align="left">
 <br />
@@ -48,10 +89,6 @@ Eröffnung am 04.02.17<br />
 
 <img src="{{ site.url }}/images/rappold.jpg" alt="image">
 </p>
-
-
-
-{% comment %}
 
 
 <p style="font-size:18px" text-align="justify" align="left">
