--- a/index.html
+++ b/index.html
@@ -40,8 +40,6 @@ ________________________________________________________________<br />
 <br />
 .bald:<br /><br />
 
-04.03.2017			Klasse Experimentelle Medien (Ausstellung)<br /><br />
-
 28.03.2017			Ensemble Pamplemousse (Filmscreening)<br /><br />
 
 31.03.2017			Trauriges Tropen Orchester (Konzert)<br /><br />
@@ -53,6 +51,8 @@ ________________________________________________________________<br />
 12.04.2017			Margit Busch & Ulrike Königshofer (Ausstellung)<br /><br />
 
 05.05.2017			Strotter Inst. (Ausstellung)<br /><br />
+
+12.05.2017          Parallel Asteroid (Performance)<br /><br />
 
 18.05.2017			Dieb13 (Lecture-Performance)<br /><br />
 
