--- a/index.html
+++ b/index.html
@@ -30,16 +30,15 @@ color:rgb(120,10,0);
 
 .jetzt:<br /><br />
 
+Mini-Festival: ACOUSTIC ARTE POVERA<br /><br />
+
+DO 06.04.   	19:30:  Benjamin Tomasi / Lala Nomada<br />
+FR  07.04.  	19:30:	Elisabeth Schaefer<br />
+SA  08.04.  	19:30:	Simone Borghi / Karl Salzmann<br />
+SO 09.04.		19:30:	A family<br />
+
+
 {% comment %}
-<b>Michael Fischer / Franciszek Araszkiewicz - 25.02.17 - 8pm</b>
-<br /><br />
-{% endcomment %}
-
-________________________________________________________________<br />
-<br />
-<br />
-.bald:<br /><br />
-
 28.03.2017			Ensemble Pamplemousse (Filmscreening)<br /><br />
 
 31.03.2017			Trauriges Tropen Orchester (Konzert)<br /><br />
@@ -47,6 +46,12 @@ ________________________________________________________________<br />
 01.04.2017			Mario de Vega (Performance)<br /><br />
 
 06.-09.04.2017		Sound Arte Povera (Mini-Festival)<br /><br />
+{% endcomment %}
+
+________________________________________________________________<br />
+<br />
+<br />
+.bald:<br /><br />
 
 13.04.2017			Margit Busch & Ulrike Königshofer (Ausstellung)<br /><br />
 
@@ -56,7 +61,7 @@ ________________________________________________________________<br />
 
 18.05.2017			Dieb13 (Lecture-Performance)<br /><br />
 
-
+22.05.2017 			Last King Of Poland, Gourmet Fleischsülze (Konzert)<br /><br />
 
 
 
