--- a/info.html
+++ b/info.html
@@ -26,11 +26,13 @@ mail[at]zentrale.jetzt
 
 
 <br /><br />
-Das Zentrale Jahresprogramm 2017 wird unterstützt von: Wien Kultur, Bezirksvertretung Ottakring (Franz Prokop) <br />
+Das Zentrale Jahresprogramm 2017 wird unterstützt von: Wien Kultur, Bezirksvertretung Ottakring (Franz Prokop), BKA <br />
 
 <img src="{{ site.url }}/images/Wien_Kultur_small.gif" alt="image">
 
 <img src="{{ site.url }}/images/bezirk16_small.jpg" alt="image">
+
+<img src="{{ site.url }}/images/bka.png" alt="image">
 
 {% comment %}
 <br />
