--- a/index.html
+++ b/index.html
@@ -30,22 +30,11 @@ color:rgb(120,10,0);
 
 .jetzt:<br /><br />
 
-Mini-Festival: ACOUSTIC ARTE POVERA<br /><br />
-
-DO 06.04.   	19:30:  Benjamin Tomasi / Lala Nomada<br />
-FR  07.04.  	19:30:	Elisabeth Schaefer<br />
-SA  08.04.  	19:30:	Simone Borghi / Karl Salzmann<br />
-SO 09.04.		19:30:	A family<br />
+13.04.2017			Margit Busch & Ulrike Königshofer (Ausstellung)<br /><br />
 
 
 {% comment %}
-28.03.2017			Ensemble Pamplemousse (Filmscreening)<br /><br />
 
-31.03.2017			Trauriges Tropen Orchester (Konzert)<br /><br />
-
-01.04.2017			Mario de Vega (Performance)<br /><br />
-
-06.-09.04.2017		Sound Arte Povera (Mini-Festival)<br /><br />
 {% endcomment %}
 
 ________________________________________________________________<br />
@@ -53,7 +42,7 @@ ________________________________________________________________<br />
 <br />
 .bald:<br /><br />
 
-13.04.2017			Margit Busch & Ulrike Königshofer (Ausstellung)<br /><br />
+27.04. - 02.05.2017 Niek Hilkmann, Joseph Knierzinger & Michael Johannes Muik<br /><br />
 
 05.05.2017			Strotter Inst. (Ausstellung)<br /><br />
 
@@ -73,6 +62,23 @@ ________________________________________________________________<br />
 
 
 {% comment %}
+
+Mini-Festival: ACOUSTIC ARTE POVERA<br /><br />
+
+DO 06.04.   	19:30:  Benjamin Tomasi / Lala Nomada<br />
+FR  07.04.  	19:30:	Elisabeth Schaefer<br />
+SA  08.04.  	19:30:	Simone Borghi / Karl Salzmann<br />
+SO 09.04.		19:30:	A family<br />
+
+28.03.2017			Ensemble Pamplemousse (Filmscreening)<br /><br />
+
+31.03.2017			Trauriges Tropen Orchester (Konzert)<br /><br />
+
+01.04.2017			Mario de Vega (Performance)<br /><br />
+
+06.-09.04.2017		Sound Arte Povera (Mini-Festival)<br /><br />
+
+
 
 
 <p style="font-size:18px" text-align="justify" align="left">
@@ -164,7 +170,7 @@ live concerts: 11.11 8pm
 <br /><br /><br />
 
 
-<b>ROY CULBERTSON / ANNA LERCHBAUMER / ANDREAS ZIßLER</b>
+<b>ROYL CULBERTSON / ANNA LERCHBAUMER / ANDREAS ZIßLER</b>
 <br /><br />
 Metall/Schweine/Popcorn/Styropor und Pommes<br /><br />
 
@@ -191,7 +197,6 @@ George Rei, Albert Mayr, Cabaret Poulet - 07|10|16
 <br /><br /><br />
 
 
-
 Karl Salzmann - 01|10|16
 <br /><br /><br />
 Michael Fischer - 18|09|16
@@ -199,7 +204,6 @@ Michael Fischer - 18|09|16
 Christoph Freidhöfer / Natascha Muhic, Black Biuti, Jorge Sanchez Chiong - 08|09|16
 <br /><br /><br />
 </p>
-
 
 <img src="{{ site.url }}/images/voiceograph_heller.jpg" alt="image">
 <br />
