--- a/archiv.html
+++ b/archiv.html
@@ -9,6 +9,8 @@ group: navigation
 
 <p style="font-size:18px" text-align="justify" align="right">
 
+Margit Busch & Ulrike Königshofer - 13.04.17
+<br /><br />
 ACOUSTIC ARTE POVERA - 06. bis 09.04.17<br />
 w / Benjamin Tomasi / Lala Nomada<br /> Elisabeth Schaefer<br /> Simone Borghi / Karl Salzmann<br /> a family 
 <br /><br />
@@ -30,7 +32,7 @@ Elena Romenkova & Christian Munk, Lambert Frey - 13.01.17
 <br /><br />
 Bachaco Lo-Fi - 17.12.16
 <br /><br />
-Die Vorspielservice - 16.12.16
+Die Vorspielservice (Electric Indigo, Michaela Schwentner & Amina Handke) - 16.12.16
 <br /><br />
 Sperl / Fischer / Gross - 10.12.16
 <br /><br />
