--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ ________________________________________________________________<br />
 <br />
 .bald:<br /><br />
 
-27.04. - 02.05.2017 Niek Hilkmann, Joseph Knierzinger & Michael Johannes Muik<br /><br />
+27.04.2017 			Niek Hilkmann, Joseph Knierzinger & Michael Johannes Muik<br /><br />
 
 05.05.2017			Strotter Inst. (Ausstellung)<br /><br />
 
