--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ color:rgb(120,10,0);
 
 .jetzt:<br /><br />
 
-06.05.2017			Strotter Inst. (Ausstellung)<br /><br />
+06.05.2017			Strotter Inst. (Ausstellung / Performance)<br /><br />
 
 {% comment %}
 
