--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ ________________________________________________________________<br />
 
 18.05.2017			Dieb13 (Lecture-Performance)<br /><br />
 
-22.05.2017 			Last King Of Poland, Gourmet Fleischsülze (Konzert)<br /><br />
+22.05.2017 			Last King Of Poland, Gourmet Fleischsülze (Performance)<br /><br />
 
 
 
