--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@ color:rgb(120,10,0);
 
 .jetzt:<br /><br />
 
-06.05.2017			Strotter Inst. (Ausstellung / Performance)<br /><br />
+12.05.2017          Parallel Asteroid (Performance)<br /><br />
+
+06.05.2017			Strotter Inst. (Ausstellung)<br /><br />
 
 {% comment %}
 
@@ -41,16 +43,9 @@ ________________________________________________________________<br />
 <br />
 .bald:<br /><br />
 
-12.05.2017          Parallel Asteroid (Performance)<br /><br />
-
 18.05.2017			Dieb13 (Lecture-Performance)<br /><br />
 
 22.05.2017 			Last King Of Poland, Gourmet Fleischsülze (Performance)<br /><br />
-
-
-
-
-
 
 
 
