--- a/archiv.html
+++ b/archiv.html
@@ -9,7 +9,8 @@ group: navigation
 
 <p style="font-size:18px" text-align="justify" align="right">
 
-
+Strotter Inst. - 06.05.17
+<br /><br />
 Niek Hilkmann, Joseph Knierzinger & Michael Johannes Muik - 28.04.17 			
 <br /><br />
 Margit Busch & Ulrike Königshofer - 13.04.17
