--- a/archiv.html
+++ b/archiv.html
@@ -9,6 +9,12 @@ group: navigation
 
 <p style="font-size:18px" text-align="justify" align="right">
 
+Last King Of Poland, Gourmet Fleischsülze (Performance) - 22.05.17
+<br /><br />
+Dieb13 (Lecture-Performance) - 18.05.17
+<br /><br />
+Parallel Asteroid (Performance) - 12.05.17
+<br /><br />
 Strotter Inst. - 06.05.17
 <br /><br />
 Niek Hilkmann, Joseph Knierzinger & Michael Johannes Muik - 28.04.17 			
