--- a/index.html
+++ b/index.html
@@ -30,9 +30,7 @@ color:rgb(120,10,0);
 
 .jetzt:<br /><br />
 
-12.05.2017          Parallel Asteroid (Performance)<br /><br />
-
-06.05.2017			Strotter Inst. (Ausstellung)<br /><br />
+06.06.2017 -- Rinus van Alebeek, Klub Moozak
 
 {% comment %}
 
@@ -43,15 +41,22 @@ ________________________________________________________________<br />
 <br />
 .bald:<br /><br />
 
-18.05.2017			Dieb13 (Lecture-Performance)<br /><br />
+09.06.2017 -- Natalia Dominguez Rangel / Gudinni Cortina / Alfred Lenz
 
-22.05.2017 			Last King Of Poland, Gourmet Fleischsülze (Performance)<br /><br />
-
+<br /><br />
 
 
 
 
 {% comment %}
+
+18.05.2017			Dieb13 (Lecture-Performance)<br /><br />
+
+22.05.2017 			Last King Of Poland, Gourmet Fleischsülze (Performance)<br /><br />
+
+12.05.2017          Parallel Asteroid (Performance)<br /><br />
+
+06.05.2017			Strotter Inst. (Ausstellung)<br /><br />
 
 28.04.2017 			Niek Hilkmann, Joseph Knierzinger & Michael Johannes Muik<br /><br />
 
