--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ ________________________________________________________________<br />
 
 <br /><br />
 
-
+<img src="{{ site.url }}/images/flyer_lenz.jpg" alt="image">
 
 
 {% comment %}
