--- a/archiv.html
+++ b/archiv.html
@@ -9,6 +9,11 @@ group: navigation
 
 <p style="font-size:18px" text-align="justify" align="right">
 
+
+Natalia Dominguez Rangel / Gudinni Cortina / Alfred Lenz - 09.06.17
+<br /><br />
+Rinus van Alebeek, Klub Moozak - 06.06.17
+<br /><br />
 Last King Of Poland, Gourmet Fleischsülze (Performance) - 22.05.17
 <br /><br />
 Dieb13 (Lecture-Performance) - 18.05.17
