--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@ color:rgb(120,10,0);
 
 .jetzt:<br /><br />
 
-06.06.2017 -- Rinus van Alebeek, Klub Moozak
+01.07.2017 -- Pit Noack / Labor für Sprechalgorithmen<br />
+
+Ausstellungsdauer: 2.7.-28.7
+
 
 {% comment %}
 
@@ -41,14 +44,19 @@ ________________________________________________________________<br />
 <br />
 .bald:<br /><br />
 
+14.7.2017 - 20h: Pit Noack / Konzert Kassettenrekorder und Lautsprecherfeld
+
+21.7.2017 - 16-19h: Pit Noack / Workshop Sonic Pi
+
+{% comment %}
+
+
 09.06.2017 -- Natalia Dominguez Rangel / Gudinni Cortina / Alfred Lenz
 
 <br /><br />
 
 <img src="{{ site.url }}/images/flyer_lenz.jpg" alt="image">
 
-
-{% comment %}
 
 18.05.2017			Dieb13 (Lecture-Performance)<br /><br />
 
