--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ color:rgb(120,10,0);
 
 01.07.2017 -- Pit Noack / Labor für Sprechalgorithmen<br />
 
-Ausstellungsdauer: 2.7.-28.7
+Ausstellungsdauer: 2.7.-28.7<br /><br />
 
 
 {% comment %}
@@ -44,9 +44,11 @@ ________________________________________________________________<br />
 <br />
 .bald:<br /><br />
 
-14.7.2017 - 20h: Pit Noack / Konzert Kassettenrekorder und Lautsprecherfeld
+14.7.2017 - 20h: Pit Noack / Konzert Kassettenrekorder und Lautsprecherfeld<br /><br />
 
 21.7.2017 - 16-19h: Pit Noack / Workshop Sonic Pi
+
+
 
 {% comment %}
 
