--- a/archiv.html
+++ b/archiv.html
@@ -9,7 +9,8 @@ group: navigation
 
 <p style="font-size:18px" text-align="justify" align="right">
 
-
+Pit Noack / Labor für Sprechalgorithmen - 01.07 bis 21.07.17<br />
+<br /><br />
 Natalia Dominguez Rangel / Gudinni Cortina / Alfred Lenz - 09.06.17
 <br /><br />
 Rinus van Alebeek, Klub Moozak - 06.06.17
