--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@ color:rgb(120,10,0);
 
 .jetzt:<br /><br />
 
+Sommer .. bis 15.9.
 
 
 {% comment %}
@@ -45,7 +46,9 @@ ________________________________________________________________<br />
 <br />
 .bald:<br /><br />
 
+15.9.2017 Muyassar Kurdi (US) / Eric Arn (US/AT)
 
+17.9.2017 Jérôme Noetinger (FR)
 
 {% comment %}
 
