--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ color:rgb(120,10,0);
 
 .jetzt:<br /><br />
 
-Sommer .. bis 15.9.
+Sommer .. bis 15.9. <br />
 
 
 {% comment %}
@@ -46,7 +46,7 @@ ________________________________________________________________<br />
 <br />
 .bald:<br /><br />
 
-15.9.2017 Muyassar Kurdi (US) / Eric Arn (US/AT)
+15.9.2017 Muyassar Kurdi (US) / Eric Arn (US/AT)<br />
 
 17.9.2017 Jérôme Noetinger (FR)
 
