--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@ ________________________________________________________________<br />
 <br />
 .bald:<br /><br />
 
-15.9.2017 Muyassar Kurdi (US) / Eric Arn (US/AT)<br />
+15.9.2017 Muyassar Kurdi (US) / Eric Arn (US/AT) (Performance)<br /><br />
 
-17.9.2017 Jérôme Noetinger (FR)
+17.9.2017 Jérôme Noetinger (FR) (Performance)
 
 {% comment %}
 
