--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ color:rgb(120,10,0);
 
 .jetzt:<br /><br />
 
-Sommerpause bis 17.09
+Sommerpause bis 13.09
 
 
 {% comment %}
@@ -46,6 +46,9 @@ ________________________________________________________________<br />
 <br />
 .bald:<br /><br />
 
+13.9.2017 Jérôme Noetinger (FR) (Performance) 
+
+15.9.2017 Muyassar Kurdi (US) / Eric Arn (US/AT) (Performance)
 
 
 {% comment %}
