--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ ________________________________________________________________<br />
 .bald:<br /><br />
 
 
-13.9.2017 Jérôme Noetinger (FR) (Performance)<br />
+13.9.2017 Jérôme Noetinger + Aude Romary (FR) (Performance)<br />
 
 15.9.2017 Muyassar Kurdi (US) / Eric Arn (US/AT) (Performance)
 
