--- a/archiv.html
+++ b/archiv.html
@@ -9,6 +9,11 @@ group: navigation
 
 <p style="font-size:18px" text-align="justify" align="right">
 
+
+Muyassar Kurdi (US) / Eric Arn (US/AT) (Performance) - 15.9.17 
+<br /><br />
+Jérôme Noetinger + Aude Romary (FR) (Performance) - 13.9.17
+<br /><br />
 Pit Noack / Labor für Sprechalgorithmen - 01.07 bis 21.07.17
 <br /><br />
 Natalia Dominguez Rangel / Gudinni Cortina / Alfred Lenz - 09.06.17
