--- a/index.html
+++ b/index.html
@@ -28,12 +28,10 @@ color:rgb(120,10,0);
 <p style="font-size:18px" text-align="justify" align="left">
 <br />
 
-.jetzt:<br /><br />
-
-Sommerpause bis 13.9. <br />
-
 
 {% comment %}
+
+.jetzt:<br /><br />
 
 01.07.2017 -- Pit Noack / Labor für Sprechalgorithmen<br />
 Ausstellungsdauer: 2.7.-21.7<br /><br />
@@ -46,14 +44,15 @@ ________________________________________________________________<br />
 <br />
 .bald:<br /><br />
 
+Transient Hole, 12-14.10.<br />
 
-13.9.2017 Jérôme Noetinger + Aude Romary (FR) (Performance)<br />
-
-15.9.2017 Muyassar Kurdi (US) / Eric Arn (US/AT) (Performance)
 
 
 {% comment %}
 
+13.9.2017 Jérôme Noetinger + Aude Romary (FR) (Performance)<br />
+
+15.9.2017 Muyassar Kurdi (US) / Eric Arn (US/AT) (Performance)
 
 14.7.2017 - 20h: Pit Noack / Konzert Kassettenrekorder und Lautsprecherfeld<br /><br />
 
