--- a/index.html
+++ b/index.html
@@ -44,11 +44,14 @@ ________________________________________________________________<br />
 <br />
 .bald:<br /><br />
 
-Transient Hole, 12-14.10.<br />
+8.11.2017 Audrey Chen & Burkhard Stangl (Performance)<br /><br />
 
+Carlos Vasconzela
 
 
 {% comment %}
+
+Transient Hole, 12-14.10.<br />
 
 13.9.2017 Jérôme Noetinger + Aude Romary (FR) (Performance)<br />
 
