--- a/archiv.html
+++ b/archiv.html
@@ -9,6 +9,12 @@ group: navigation
 
 <p style="font-size:18px" text-align="justify" align="right">
 
+Dieb13 + Phil Minton, 03.12.17
+<br /><br />
+Carlos Vasconzela
+<br /><br />
+8.11.2017 Audrey Chen & Burkhard Stangl (Performance)
+<br /><br />
 Transient Hole, 12-14.10.17
 <br /><br />
 Muyassar Kurdi (US) / Eric Arn (US/AT) (Performance) - 15.9.17 
