--- a/index.html
+++ b/index.html
@@ -44,12 +44,16 @@ ________________________________________________________________<br />
 <br />
 .bald:<br /><br />
 
-8.11.2017 Audrey Chen & Burkhard Stangl (Performance)<br /><br />
 
-Carlos Vasconzela
 
 
 {% comment %}
+
+Dieb13 + Phil Minton, 03.12.17
+
+Carlos Vasconzela
+
+8.11.2017 Audrey Chen & Burkhard Stangl (Performance)<br /><br />
 
 Transient Hole, 12-14.10.<br />
 
