--- a/archiv.html
+++ b/archiv.html
@@ -9,11 +9,11 @@ group: navigation
 
 <p style="font-size:18px" text-align="justify" align="right">
 
-Dieb13 + Phil Minton, 03.12.17
+Phil Minton + dieb13, 03.12.17
 <br /><br />
 Carlos Vasconzela
 <br /><br />
-8.11.2017 Audrey Chen & Burkhard Stangl (Performance)
+Audrey Chen & Burkhard Stangl (Performance), 8.11.17 
 <br /><br />
 Transient Hole, 12-14.10.17
 <br /><br />
