--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ Dieb13 + Phil Minton, 03.12.17
 
 Carlos Vasconzela
 
-8.11.2017 Audrey Chen & Burkhard Stangl (Performance)<br /><br />
+8.11.2017 Audrey Chen & Burkhard Stangl (Performance)<br />
 
 Transient Hole, 12-14.10.<br />
 
