--- a/archiv.html
+++ b/archiv.html
@@ -9,9 +9,11 @@ group: navigation
 
 <p style="font-size:18px" text-align="justify" align="right">
 
-Phil Minton + dieb13, 03.12.17
+Jorge Sanchez Chiong (Performance), 20.12.17
 <br /><br />
-Carlos Vasconzela
+Phil Minton + dieb13 (Performance), 03.12.17
+<br /><br />
+Carlos Vasconzelos, 10.11.17
 <br /><br />
 Audrey Chen & Burkhard Stangl (Performance), 8.11.17 
 <br /><br />
