--- a/archiv.html
+++ b/archiv.html
@@ -19,7 +19,9 @@ Carlos Vasconzelos, 10.11.17
 <br /><br />
 Audrey Chen & Burkhard Stangl (Performance), 08.11.17 
 <br /><br />
-Transient Hole, 12-14.10.17
+Transient Hole, 12-14.10.17<br />
+live: Paul Gründorfer + Philip Leitner<br />
+Michael Fischer
 <br /><br />
 Muyassar Kurdi (US) / Eric Arn (US/AT) (Performance) - 15.09.17 
 <br /><br />
