--- a/index.html
+++ b/index.html
@@ -33,67 +33,23 @@ color:rgb(120,10,0);
 
 .jetzt:<br /><br />
 
-01.07.2017 -- Pit Noack / Labor für Sprechalgorithmen<br />
-Ausstellungsdauer: 2.7.-21.7<br /><br />
+10.11.2017 -- Carlos Vasconcelos<br />
+Ausstellungsdauer: 11.11.-20.12<br /><br />
 
 {% endcomment %}
 
 
 
-{% comment %}
+
 
 ________________________________________________________________<br />
 <br />
 <br />
 .bald:<br /><br />
 
+15.01.17		Klaus Filip
 
 
-
-
-
-Dieb13 + Phil Minton, 03.12.17
-
-Carlos Vasconzela
-
-8.11.2017 Audrey Chen & Burkhard Stangl (Performance)<br />
-
-Transient Hole, 12-14.10.<br />
-
-13.9.2017 Jérôme Noetinger + Aude Romary (FR) (Performance)<br />
-
-15.9.2017 Muyassar Kurdi (US) / Eric Arn (US/AT) (Performance)
-
-14.7.2017 - 20h: Pit Noack / Konzert Kassettenrekorder und Lautsprecherfeld<br /><br />
-
-21.7.2017 - 16-19h: Pit Noack / Workshop Sonic Pi
-
-
-
-18.05.2017			Dieb13 (Lecture-Performance)<br /><br />
-
-22.05.2017 			Last King Of Poland, Gourmet Fleischsülze (Performance)<br /><br />
-
-12.05.2017          Parallel Asteroid (Performance)<br /><br />
-
-06.05.2017			Strotter Inst. (Ausstellung)<br /><br />
-
-Mini-Festival: ACOUSTIC ARTE POVERA<br /><br />
-
-DO 06.04.   	19:30:  Benjamin Tomasi / Lala Nomada<br />
-FR  07.04.  	19:30:	Elisabeth Schaefer<br />
-SA  08.04.  	19:30:	Simone Borghi / Karl Salzmann<br />
-SO 09.04.		19:30:	A family<br />
-
-28.03.2017			Ensemble Pamplemousse (Filmscreening)<br /><br />
-
-31.03.2017			Trauriges Tropen Orchester (Konzert)<br /><br />
-
-01.04.2017			Mario de Vega (Performance)<br /><br />
-
-06.-09.04.2017		Sound Arte Povera (Mini-Festival)<br /><br />
-
-{% endcomment %}
 
 
 
