--- a/archiv.html
+++ b/archiv.html
@@ -9,6 +9,9 @@ group: navigation
 
 <p style="font-size:18px" text-align="justify" align="right">
 
+
+Seijiro Murayama + Klaus Filip (Performance), 15.01.18
+<br /><br />
 Jorge Sanchez Chiong (Performance), 20.12.17
 <br /><br />
 Marko Markovic (Performance) at Jahresendzeitschokoladenhohlkörper, rhiz, 17.12.17
