--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@ ________________________________________________________________<br />
 <br />
 .bald:<br /><br />
 
-15.01.17		Klaus Filip
+01.02.2018		Noid (Ausstellung)
+03.02.2018		Rheuma 3000 (Performance)
 
 
 
