--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ ________________________________________________________________<br />
 <br />
 .bald:<br /><br />
 
-01.02.2018		Noid (Ausstellung)
+01.02.2018		Noid (Ausstellung) - Christine Schörkhuber (Performance)
 <br />
 03.02.2018		Rheuma 3000 (Performance)
 
