--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ ________________________________________________________________<br />
 
 01.02.2018		Noid (Ausstellung) - Christine Schörkhuber (Performance)
 <br />
-03.02.2018		Rheuma 3000 (Performance)
+03.02.2018		Rheuma 3000 (Performance) - Sebastian Six (Performance)
 
 
 
