--- a/archiv.html
+++ b/archiv.html
@@ -10,6 +10,10 @@ group: navigation
 <p style="font-size:18px" text-align="justify" align="right">
 
 
+Rheuma 3000 (Performance) - Sebastian Six (Performance), 03.02.2018
+<br /><br />
+Noid (Ausstellung) - Christine Schörkhuber (Performance), 01.02.2018
+<br /><br />
 Seijiro Murayama + Klaus Filip (Performance), 15.01.18
 <br /><br />
 Jorge Sanchez Chiong (Performance), 20.12.17
