--- a/index.html
+++ b/index.html
@@ -29,9 +29,15 @@ color:rgb(120,10,0);
 <br />
 
 
-{% comment %}
+
 
 .jetzt:<br /><br />
+
+01.02.2018		Noid (Ausstellung)<br />
+Ausstellungsdauer: 02.02.-04.03.<br /><br />
+
+
+{% comment %}
 
 10.11.2017 -- Carlos Vasconcelos<br />
 Ausstellungsdauer: 11.11.-20.12<br /><br />
@@ -41,6 +47,7 @@ Ausstellungsdauer: 11.11.-20.12<br /><br />
 
 
 
+{% comment %}
 
 ________________________________________________________________<br />
 <br />
@@ -53,9 +60,6 @@ ________________________________________________________________<br />
 
 
 
-
-
-{% comment %}
 {% endcomment %}
 
 
