--- a/archiv.html
+++ b/archiv.html
@@ -87,7 +87,7 @@ Royl Culbertson / Anna Lerchbaumer & Andreas Zißler - 03.11.16
 <br /><br />
 João Castro Pinto - 29.10.16
 <br /><br />	
-George Rei, Albert Mayr, Cabaret Poulet - 07.10.16
+George Rei, Albert Mayr, Paul Gründorfer - 07.10.16
 <br /><br />
 Karl Salzmann - 01.10.16
 <br /><br />
