--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ color:rgb(120,10,0);
 
 .jetzt:<br /><br />
 
-01.02.2018		Noid (Ausstellung)<br />
+01.02.2018 -- Noid "El Paraisofono"<br />
 Ausstellungsdauer: 02.02.-04.03.<br /><br />
 
 
