--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ color:rgb(120,10,0);
 09.03.2018 -- Répertoire général mit Peter Moosgaard<br /><br />
 
 04.03.2018 -- Antonio Raia + Renato Fiorito / Asylum (Performance)<br />
-------------- Paraisofono - Lisbeth Kovacic, Christine Schörkhuber, Stefan Voglsinger, noid<br />
+--------------- Paraisofono - Lisbeth Kovacic, Christine Schörkhuber, Stefan Voglsinger, noid<br />
 <br />
 
 01.02.2018 -- Noid "El Paraisofono"<br />
