--- a/index.html
+++ b/index.html
@@ -29,44 +29,36 @@ color:rgb(120,10,0);
 <br />
 
 
-
+{% comment %}
 
 .jetzt:<br /><br />
 
-09.03.2018 -- Répertoire général mit Peter Moosgaard<br /><br />
-
-04.03.2018 -- Antonio Raia + Renato Fiorito / Asylum (Performance)<br />
----------------- Paraisofono - Lisbeth Kovacic, Christine Schörkhuber, Stefan Voglsinger, noid<br />
-<br />
-
-01.02.2018 -- Noid "El Paraisofono"<br />
-Ausstellungsdauer: 02.02.-04.03.<br /><br />
-
-
-{% comment %}
-
-10.11.2017 -- Carlos Vasconcelos<br />
-Ausstellungsdauer: 11.11.-20.12<br /><br />
 
 {% endcomment %}
-
 
 
 
 {% comment %}
 
 ________________________________________________________________<br />
+
+
+{% endcomment %}
+
 <br />
 <br />
 .bald:<br /><br />
 
-01.02.2018		Noid (Ausstellung) - Christine Schörkhuber (Performance)
-<br />
-03.02.2018		Rheuma 3000 (Performance) - Sebastian Six (Performance)
+09.03.2018 -- Répertoire général mit Peter Moosgaard (Repertoire)<br /><br />
+
+Kathrin Stumreich "Sovereignity"<br />
+Eröffnung: Sa. 10/03/2018 ab 19:00<br />
+Live-Performance um ~ 20:30<br />
+Ausstellungsdauer: 11.03. - 01.04.2018<br /><br />
+
+16.03.2018 -- Steve Bates / Black Seas (Performance)
 
 
-
-{% endcomment %}
 
 
 
