--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ color:rgb(120,10,0);
 
 
 {% comment %}
-{% endcomment %}
+
 
 .jetzt:<br /><br />
 
@@ -38,19 +38,21 @@ color:rgb(120,10,0);
 Kathrin Stumreich "Sovereignity"<br />
 Ausstellungsdauer: 11.03. - 01.04.2018<br /><br />
 
+{% endcomment %}
 
 {% comment %}
 
 ________________________________________________________________<br />
 
+{% endcomment %}
 
 <br />
 <br />
 .bald:<br /><br />
 
-25.03.2018 -- Pagan 11 / Rovar17  / Emerge / Syporca Whandal (Performance)
+14.04.2018 -- Uli Kühn (Ausstellung)
 
 
-{% endcomment %}
+
 
 
