--- a/index.html
+++ b/index.html
@@ -29,11 +29,14 @@ color:rgb(120,10,0);
 <br />
 
 
-{% comment %}
+
 
 
 .jetzt:<br /><br />
 
+14.04.2018 -- Uli Kühn (Ausstellung)
+
+{% comment %}
 
 Kathrin Stumreich "Sovereignity"<br />
 Ausstellungsdauer: 11.03. - 01.04.2018<br /><br />
@@ -50,7 +53,19 @@ ________________________________________________________________<br />
 <br />
 .bald:<br /><br />
 
-14.04.2018 -- Uli Kühn (Ausstellung)
+12.04.2018 Michael Schuhmacher (Performance)
+<br />
+
+16.04.2018 Marko Markovic (Performance)
+<br />
+
+18.04.2018 Peter Moosgaard (Ausstellung)
+<br />
+
+20.04.2018 ZGB / Dario Fariello, Mikael Szafirowski, Alex Riva | Yoshimoto Yumiko, Jakob Gnigler (Performance)
+<br />
+
+1.06.2018 Hanna Schaich (Ausstellung)
 
 
 
