--- a/index.html
+++ b/index.html
@@ -41,7 +41,11 @@ color:rgb(120,10,0);
 Kathrin Stumreich "Sovereignity"<br />
 Ausstellungsdauer: 11.03. - 01.04.2018<br /><br />
 
+25.05.2018 Peter Moosgaard (Ausstellung)
+
 {% endcomment %}
+
+
 
 {% comment %}
 
@@ -53,19 +57,8 @@ ________________________________________________________________<br />
 <br />
 .bald:<br /><br />
 
-12.05.2018 Michael Schuhmacher (Performance)
-<br />
-
-16.05.2018 Marko Markovic (Performance)
-<br />
-
-20.05.2018 ZGB / Dario Fariello, Mikael Szafirowski, Alex Riva | Yoshimoto Yumiko, Jakob Gnigler (Performance)
-<br />
-
-25.05.2018 Peter Moosgaard (Ausstellung)
-<br />
-
-1.06.2018 Hanna Schaich (Ausstellung)
+02.06.2018 Hanna Schaich 'A Kiss Away From Reality' / Danielle Pamp (Performance)
+Ausstellungsdauer: 03.06. - 15.07.2018<br /><br />
 
 
 
