--- a/archiv.html
+++ b/archiv.html
@@ -9,6 +9,8 @@ group: navigation
 
 <p style="font-size:18px" text-align="justify" align="right">
 
+Hanna Schaich 'A Kiss Away From Reality' / Danielle Pamp (Performance) - 02.06.18 
+<br /><br />
 ZGB / Dario Fariello, Mikael Szafirowski, Alex Riva | Yoshimoto Yumiko, Jakob Gnigler (Performance) - 20.05.18 
 <br /><br />
 Marko Markovic (Performance) - 16.05.18 
