--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@ color:rgb(120,10,0);
 
 .jetzt:<br /><br />
 
+02.06.2018 Hanna Schaich 'A Kiss Away From Reality' / Danielle Pamp (Performance)
+Ausstellungsdauer: 03.06. - 15.07.2018<br /><br />
+
 
 {% comment %}
 
@@ -56,9 +59,8 @@ ________________________________________________________________<br />
 <br />
 .bald:<br /><br />
 
-02.06.2018 Hanna Schaich 'A Kiss Away From Reality' / Danielle Pamp (Performance)
-Ausstellungsdauer: 03.06. - 15.07.2018<br /><br />
-
+10.06.2018 The Fondle Tour / Vienna - Mitra Saboury, Nina Sarnelle, Megan Snowe<br />
+16.06.2018 Kooperation mit salon elise #3 / on site – on line – on foot
 
 
 
