--- a/archiv.html
+++ b/archiv.html
@@ -9,13 +9,16 @@ group: navigation
 
 <p style="font-size:18px" text-align="justify" align="right">
 
-Hanna Schaich 'A Kiss Away From Reality' / Danielle Pamp (Performance) - 02.06.18 
+Hanna Schaich 'A Kiss Away From Reality' (Ausstellung) / Danielle Pamp (Performance) - 02.06.18 
 <br /><br />
-ZGB / Dario Fariello, Mikael Szafirowski, Alex Riva | Yoshimoto Yumiko, Jakob Gnigler (Performance) - 20.05.18 
+ZGB / Dario Fariello, Mikael Szafirowski, Alex Riva |<br />
+Yoshimoto Yumiko, Jakob Gnigler (Performance) - 20.05.18 
 <br /><br />
-Marko Markovic (Performance) - 16.05.18 
+Ⓐusländer (Performance) - 16.05.18 
 <br /><br />
-Michael Schuhmacher (Performance) - 12.05.18 
+Michael Schuhmacher (Performance) - 12.05.18
+<br /><br />
+Two Duos / CRISTIÁN ALVEAR + KLAUS FILIP, GUDINNI CORTINA + BURKHARD STANGL (Ausstellung) - 27.04.18
 <br /><br />
 Uli Kühn (Ausstellung) - 14.04.18
 <br /><br />
