--- a/archiv.html
+++ b/archiv.html
@@ -11,14 +11,14 @@ group: navigation
 
 Hanna Schaich 'A Kiss Away From Reality' (Ausstellung) / Danielle Pamp (Performance) - 02.06.18 
 <br /><br />
-ZGB / Dario Fariello, Mikael Szafirowski, Alex Riva |<br />
+ZGB / Dario Fariello, Mikael Szafirowski, Alex Riva / <br />
 Yoshimoto Yumiko, Jakob Gnigler (Performance) - 20.05.18 
 <br /><br />
 Ⓐusländer (Performance) - 16.05.18 
 <br /><br />
 Michael Schuhmacher (Performance) - 12.05.18
 <br /><br />
-Two Duos / CRISTIÁN ALVEAR + KLAUS FILIP, GUDINNI CORTINA + BURKHARD STANGL (Ausstellung) - 27.04.18
+Two Duos / Cristián Alvear + Klaus Filip, Gudinni Cortina + Burkhard Stangl (Performance) - 27.04.18
 <br /><br />
 Uli Kühn (Ausstellung) - 14.04.18
 <br /><br />
