--- a/archiv.html
+++ b/archiv.html
@@ -9,6 +9,10 @@ group: navigation
 
 <p style="font-size:18px" text-align="justify" align="right">
 
+Kooperation mit salon elise #3 / on site – on line – on foot - 16.06.18 
+<br /><br />
+The Fondle Tour / Vienna - Mitra Saboury, Nina Sarnelle, Megan Snowe - 11.06.18 
+<br /><br />
 Hanna Schaich 'A Kiss Away From Reality' (Ausstellung) / Danielle Pamp (Performance) - 02.06.18 
 <br /><br />
 ZGB / Dario Fariello, Mikael Szafirowski, Alex Riva / <br />
