--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@ color:rgb(120,10,0);
 02.06.2018 Hanna Schaich 'A Kiss Away From Reality' / Danielle Pamp (Performance)
 Ausstellungsdauer: 03.06. - 15.07.2018<br /><br />
 
+26.06.2018 Bad Weather Report<br /><br />
 
 {% comment %}
 
@@ -53,15 +54,14 @@ Ausstellungsdauer: 11.03. - 01.04.2018<br /><br />
 
 ________________________________________________________________<br />
 
-{% endcomment %}
+
 
 <br />
 <br />
 .bald:<br /><br />
 
-11.06.2018 The Fondle Tour / Vienna - Mitra Saboury, Nina Sarnelle, Megan Snowe<br />
-16.06.2018 Kooperation mit salon elise #3 / on site – on line – on foot
 
+{% endcomment %}
 
 
 
